# convertreino

./: .gitignore  README.md  convertreino-spec-guide.md
backend/: .coverage  .env.example  .env.test-tmp  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_strava_user_fields.py  003_activities_user_external_id_unique.py
backend/docker/postgres-init/: 01-create-test-db.sql
backend/src/convertreino/api/: dependencies.py  main.py
backend/src/convertreino/application/: chat_orchestrator.py  chat_tools.py  jwt_token_service.py  strava_oauth_service.py  strava_sync_service.py  strava_webhook_processor.py
backend/src/convertreino/domain/: exceptions.py
backend/src/convertreino/infrastructure/: config.py  load_env.py  phoenix_tracing.py  tracing.py
backend/src/convertreino/mcp/: __main__.py  mappers.py  schemas.py  server.py
backend/tests/builders/: __init__.py
backend/tests/contracts/: test_repository_contracts.py  test_strava_client_contract.py
backend/tests/e2e/: accuracy.py  conftest.py  intent_matrix.py  job_summary.py  test_chat_intent_accuracy.py
backend/tests/e2e/fixtures/: chat_intent_matrix.yaml
backend/tests/integration/: test_chat_messages.py  test_mcp_get_longest_ride.py  test_mcp_get_longest_run.py  test_postgres_and_health.py  test_strava_activity_sync.py  test_strava_oauth.py  test_strava_webhooks.py
backend/tests/unit/: test_entities.py  test_repositories.py
backend/tests/unit/api/: test_auth_dependencies.py
backend/tests/unit/application/: test_chat_orchestrator.py  (+6 more)
(+113 files in other folders)
