[project]
name = "convertreino"
version = "0.1.0"
description = "ConverTreino backend foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "fastmcp>=3.4.2",
    "pyjwt[crypto]>=2.10.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
observability = [
    "arize-phoenix-otel>=0.9.0",
    "openinference-instrumentation-openai>=0.1.30",
    "opentelemetry-api>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["convertreino"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
markers = [
    "integration: tests requiring PostgreSQL",
    "e2e: end-to-end tests with real LLM providers (excluded from PR CI)",
]

[tool.coverage.run]
source = ["convertreino"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95
include = ["*/domain/*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["convertreino"]
mypy_path = "src"
